基本目录更新

--- a/cinema.html
+++ b/cinema.html
@@ -42,12 +42,12 @@
 
                         </li>
                         <li>
-                            <a class="tel" href="" mce_href="">
+                            <a class="tel" href="">
                                 <i class="i_tel"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="#!/theater/292/9709/map/">
+                            <a href="#">
                                 <i class="i_address"></i>
                             </a>
                         </li>
@@ -126,7 +126,7 @@
                 </div>
                 <div class="select_movie">
                     <div class="s_moive_tit">
-                        <a class="minfo" href="#!/movie/217497/">
+                        <a class="minfo" href="#">
                             <h2>复仇者联盟3：无限战争</h2>
                             <p>
                                 <b>150分钟 - 动作 | 冒险 | 奇幻</b>
