--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
     <link type="image/x-icon" href="img/favicon.ico" rel="shortcut icon">
     <!-- 在收藏夹中显示图标 -->
     <link type="image/x-icon" href="img/favicon.ico" rel="bookmark">
-    <!-- 在iphone和ipod上创建快捷键时使用 -->
-    <link rel="apple-touch-icon" href="img/favicon.png">
 
     <link rel="stylesheet" href="css/m-common.css">
     <link rel="stylesheet" href="css/index.css">
@@ -48,14 +46,14 @@
                             </a>
                         </div>
                         <p class="input">
-                            <a href="#!/search/index.html">
+                            <a href="#">
                                 <span>影片/影院/影人，任你搜</span>
                             </a>
                         </p>
                     </div>
                     <article class="indexmovie">
                         <h2>
-                            <a href="#!/home/hot/">
+                            <a href="#">
                                 <i class="i_tnext"></i>
                                 <b>正在热映（
                                     <i id="nowmovienum"></i>部）</b>
@@ -80,7 +78,7 @@
                     </article>
                     <article class="indexmovie indexclick">
                         <h2>
-                            <a href="#!/home/coming/">
+                            <a href="#">
                                 <i class="i_tnext"></i>
                                 <b>即将上映（<i id="futurenum"></i>部）</b>
                             </a>
@@ -98,7 +96,6 @@
                                 <b>今日热点</b>
                             </a>
                             <ul id="hotPoints">
-
                                 <!-- <li>
                                     <div class="table">
                                         <div class="todaypic">
