--- a/theater.html
+++ b/theater.html
@@ -31,7 +31,7 @@
                 <div class="search">
 
                     <div class="searchbox">
-                        <a href="/mtime/citylist/city.html">
+                        <a href="city.html">
                             <div class="localcity">
                                 <b>北京</b>
                                 <i class="i_block i_city"></i>
